--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,3 @@
 [build]
-  command = "npm run build" # or your build command
-  publish = "build" # specify the directory where your built files are located
-
+  command = "npm run build"
+  publish = "/react-app/build"
